# EcoSys

./: CMakeLists.txt
include/: DataLogger.h  Entity.h  Grid.h  Parameters.h  Simulation.h  Visualizer.h
src/: DataLogger.cpp  Grid.cpp  Simulation.cpp  Visualizer.cpp  main.cpp
tests/: test_grid.cpp  test_log.cpp  test_sim.cpp
